# nginx-conf

./: .gitignore  LICENSE  Makefile  README.md  configure.py  pixi.toml  pyproject.toml
scripts/: get_minijinja.py  make_data.py
src/: mime.types.jinja  nginx.conf.jinja
src/conf.d/: ajax.googleapis.com.conf  ajax.googleapis.com.conf.jinja  cdn.jsdelivr.net.conf.jinja  cdnjs.cloudflare.com.conf  cdnjs.cloudflare.com.conf.jinja  conda.anaconda.org.conf.jinja  gist.github.com.conf  github.com.conf.jinja  github.githubassets.com.conf  github.githubassets.com.conf.jinja  software.repos.intel.com.conf.jinja  zenodo.org.conf.jinja
src/conf.d/stream/: github.com.conf.jinja
src/snippets/: ssl.conf  static_file_proxy.conf.jinja
